// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmarks should render bookmarks dropdown when loaded 1`] = `
<Fragment>
  <SearchModal
    controller="architectures"
    onEnter={[Function]}
    setModalClosed={[MockFunction]}
    title="Create Bookmark"
    url="/api/v2/architectures"
  />
  <ForwardRef
    id="architectures"
    onClick={[Function]}
    pullRight={true}
  >
    <DropdownToggle
      bsClass="dropdown-toggle"
      bsRole="toggle"
      open={false}
      title="Bookmarks"
      useAnchor={false}
    >
      <Icon
        name="bookmark"
        type="fa"
      />
    </DropdownToggle>
    <DropdownMenu
      bsClass="dropdown-menu"
      bsRole="menu"
      className="scrollable-dropdown"
      pullRight={false}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        header={false}
        id="newBookmark"
        key="newBookmark"
        onClick={[MockFunction]}
      >
        Bookmark this search
      </MenuItem>
      <DocumentationLink
        href="https://test-docs.com"
      >
        Documentation
      </DocumentationLink>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={true}
        header={false}
      />
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        header={true}
      >
        Saved Bookmarks
      </MenuItem>
      <Bookmark
        key="my-bookmark"
        onClick={[Function]}
        query="name ~ 86"
        text="my-bookmark"
      />
    </DropdownMenu>
  </ForwardRef>
</Fragment>
`;

exports[`Bookmarks should render bookmarks dropdown when loading 1`] = `
<Fragment>
  <SearchModal
    controller="architectures"
    onEnter={[Function]}
    setModalClosed={[MockFunction]}
    title="Create Bookmark"
    url="/api/v2/architectures"
  />
  <ForwardRef
    id="architectures"
    onClick={[Function]}
    pullRight={true}
  >
    <DropdownToggle
      bsClass="dropdown-toggle"
      bsRole="toggle"
      open={false}
      title="Bookmarks"
      useAnchor={false}
    >
      <Icon
        name="bookmark"
        type="fa"
      />
    </DropdownToggle>
    <DropdownMenu
      bsClass="dropdown-menu"
      bsRole="menu"
      className="scrollable-dropdown"
      pullRight={false}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        header={false}
        id="newBookmark"
        key="newBookmark"
        onClick={[MockFunction]}
      >
        Bookmark this search
      </MenuItem>
      <DocumentationLink
        href="https://test-docs.com"
      >
        Documentation
      </DocumentationLink>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={true}
        header={false}
      />
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        header={true}
      >
        Saved Bookmarks
      </MenuItem>
      <li
        className="loader-root"
      >
        <Spinner
          className=""
          inline={false}
          inverse={false}
          loading={true}
          size="xs"
        />
      </li>
    </DropdownMenu>
  </ForwardRef>
</Fragment>
`;

exports[`Bookmarks should render when no bookmarks loaded 1`] = `
<Fragment>
  <SearchModal
    controller="architectures"
    onEnter={[Function]}
    setModalClosed={[MockFunction]}
    title="Create Bookmark"
    url="/api/v2/architectures"
  />
  <ForwardRef
    id="architectures"
    onClick={[Function]}
    pullRight={true}
  >
    <DropdownToggle
      bsClass="dropdown-toggle"
      bsRole="toggle"
      open={false}
      title="Bookmarks"
      useAnchor={false}
    >
      <Icon
        name="bookmark"
        type="fa"
      />
    </DropdownToggle>
    <DropdownMenu
      bsClass="dropdown-menu"
      bsRole="menu"
      className="scrollable-dropdown"
      pullRight={false}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        header={false}
        id="newBookmark"
        key="newBookmark"
        onClick={[MockFunction]}
      >
        Bookmark this search
      </MenuItem>
      <DocumentationLink
        href="https://test-docs.com"
      >
        Documentation
      </DocumentationLink>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={true}
        header={false}
      />
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        header={true}
      >
        Saved Bookmarks
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={true}
        divider={false}
        header={false}
      >
         
        None found
      </MenuItem>
    </DropdownMenu>
  </ForwardRef>
</Fragment>
`;

exports[`Bookmarks should show error 1`] = `
<Fragment>
  <SearchModal
    controller="architectures"
    onEnter={[Function]}
    setModalClosed={[MockFunction]}
    title="Create Bookmark"
    url="/api/v2/architectures"
  />
  <ForwardRef
    id="architectures"
    onClick={[Function]}
    pullRight={true}
  >
    <DropdownToggle
      bsClass="dropdown-toggle"
      bsRole="toggle"
      open={false}
      title="Bookmarks"
      useAnchor={false}
    >
      <Icon
        name="bookmark"
        type="fa"
      />
    </DropdownToggle>
    <DropdownMenu
      bsClass="dropdown-menu"
      bsRole="menu"
      className="scrollable-dropdown"
      pullRight={false}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        header={false}
        id="newBookmark"
        key="newBookmark"
        onClick={[MockFunction]}
      >
        Bookmark this search
      </MenuItem>
      <DocumentationLink
        href="https://test-docs.com"
      >
        Documentation
      </DocumentationLink>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={true}
        header={false}
      />
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        header={true}
      >
        Saved Bookmarks
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        header={false}
        key="bookmarks-errors"
      >
        <EllipisWithTooltip>
          Failed to load bookmarks: %s
        </EllipisWithTooltip>
      </MenuItem>
    </DropdownMenu>
  </ForwardRef>
</Fragment>
`;
